--- a/public/css/style.css
+++ b/public/css/style.css
@@ -258,6 +258,15 @@ table th {
     border-bottom: 2px solid #363636;
 }
 
+.form-select {
+    width: 400px;
+    padding: 5px;
+    border: none;
+    border-bottom: 2px solid #363636;
+    background: none;
+    margin-left: 80px;
+}
+
 .form-large {
     width: 400px;
     padding: 15px;
@@ -266,7 +275,7 @@ table th {
     border-bottom: 2px solid #363636;
 }
 
-.form-regular:focus, .form-large:focus {
+.form-regular:focus, .form-large:focus, .form-select:focus {
     border-color: #d20163;
 }
 
@@ -281,12 +290,24 @@ table th {
     text-decoration: none;
 }
 
-.form-submit:hover {
+.form-submit-multi {
+    background-color: #363636;
+    color: white;
+    margin-left: 80px;
+    padding: 10px;
+    width: 100px;
+    font-size: 17px;
+    cursor: pointer;
+    border: 1px solid #363636;
+    text-decoration: none;
+}
+
+.form-submit:hover, .form-submit-multi:hover {
     background-color: #4a4a4a;
     border: 1px solid #4a4a4a;
 }
 
-.form-submit:active {
+.form-submit:active, .form-submit-multi:active {
     background-color: white;
     color: #363636;
     border: 1px solid #363636;
